# Just-a-SOM

./: .compiling.sh.swp  CMakeLists.txt  LICENSE  README.md
src/: .main.c.swp  compiling.sh  functions.c  functions.h  main.c  som.out
src/functions/: functions.c  functions.h
src/kohonen_algorithm/: kohonen_som.c  kohonen_som.h
src/make_a_list/: list.c  list.h
src/neighborhood/: neighborhood.c  neighborhood.h
src/node/: node.c  node.h
src/voronoi_space/: lattice.c  lattice.h
theory/: .diapo.tex.swp  diapo.aux  diapo.nav  diapo.out  diapo.tex  diapo.toc
